--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -3,6 +3,7 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
+
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -18,6 +19,16 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+
+  <!--可以让Account这个目录被访问-->
+  <location path="Account">
+    <system.web>
+      <authorization>
+        <allow users="*"/>
+      </authorization>
+    </system.web>
+  </location>
+  <!--可以让Account这个目录被访问-->
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5" />
@@ -25,10 +36,13 @@
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Logon" timeout="2880" path="/" />
     </authentication>
+    <!--设置为form验证, 并拒绝所有的匿名用户-->
+    
+    <!--实现拒绝所有用户-->
     <authorization>
       <deny users="?"/>
     </authorization>
-    <!--设置为form验证, 并拒绝所有的匿名用户-->
+   
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
