--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -146,13 +146,27 @@
     <Content Include="Content\Bootstrap\img\bs-docs-masthead-pattern.png" />
     <Content Include="Content\Bootstrap\img\bs-docs-responsive-illustrations.png" />
     <Content Include="Content\Bootstrap\img\bs-docs-twitter-github.png" />
+    <Content Include="Content\Bootstrap\img\example-sites\8020select.png" />
+    <Content Include="Content\Bootstrap\img\example-sites\adoptahydrant.png" />
+    <Content Include="Content\Bootstrap\img\example-sites\breakingnews.png" />
     <Content Include="Content\Bootstrap\img\example-sites\fleetio.png" />
+    <Content Include="Content\Bootstrap\img\example-sites\gathercontent.png" />
     <Content Include="Content\Bootstrap\img\example-sites\jshint.png" />
     <Content Include="Content\Bootstrap\img\example-sites\kippt.png" />
     <Content Include="Content\Bootstrap\img\example-sites\soundready.png" />
+    <Content Include="Content\Bootstrap\img\examples\bootstrap-example-carousel.png" />
     <Content Include="Content\Bootstrap\img\examples\bootstrap-example-fluid.jpg" />
     <Content Include="Content\Bootstrap\img\examples\bootstrap-example-hero.jpg" />
+    <Content Include="Content\Bootstrap\img\examples\bootstrap-example-marketing-narrow.png" />
+    <Content Include="Content\Bootstrap\img\examples\bootstrap-example-signin.png" />
     <Content Include="Content\Bootstrap\img\examples\bootstrap-example-starter.jpg" />
+    <Content Include="Content\Bootstrap\img\examples\bootstrap-example-sticky-footer.png" />
+    <Content Include="Content\Bootstrap\img\examples\browser-icon-chrome.png" />
+    <Content Include="Content\Bootstrap\img\examples\browser-icon-firefox.png" />
+    <Content Include="Content\Bootstrap\img\examples\browser-icon-safari.png" />
+    <Content Include="Content\Bootstrap\img\examples\slide-01.jpg" />
+    <Content Include="Content\Bootstrap\img\examples\slide-02.jpg" />
+    <Content Include="Content\Bootstrap\img\examples\slide-03.jpg" />
     <Content Include="Content\Bootstrap\img\glyphicons-halflings-white.png" />
     <Content Include="Content\Bootstrap\img\glyphicons-halflings.png" />
     <Content Include="Content\Bootstrap\img\grid-baseline-20px.png" />
