完成留言登录

--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -18,6 +18,7 @@
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
+    <add key="DB" value="Data Source=.\sqlexpress;Initial Catalog=SNSDB;Integrated Security=True"/>
   </appSettings>
 
   <!--可以让Account这个目录被访问-->
