--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -295,6 +295,12 @@
   <ItemGroup>
     <Content Include="packages.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\WebBusiness\WebBusiness.csproj">
+      <Project>{1b895fb9-c3ee-4117-804b-d2586f5f422b}</Project>
+      <Name>WebBusiness</Name>
+    </ProjectReference>
+  </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
     <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
