--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -253,6 +253,13 @@
     <Content Include="Content\Site.css" />
     <Content Include="Content\Bootstrap\js\README.md" />
     <None Include="Scripts\jquery-1.7.1.intellisense.js" />
+    <Content Include="Images\1.jpg" />
+    <Content Include="Images\2.jpg" />
+    <Content Include="Images\3.jpg" />
+    <Content Include="Images\4.jpg" />
+    <Content Include="Images\6.jpg" />
+    <Content Include="Images\7.jpg" />
+    <Content Include="Images\8.jpg" />
     <Content Include="Scripts\jquery-1.7.1.js" />
     <Content Include="Scripts\jquery-1.7.1.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
@@ -294,6 +301,7 @@
     <Content Include="Views\Note\Index.cshtml" />
     <Content Include="Views\Note\BrowseAll.cshtml" />
     <Content Include="Views\Note\Append.cshtml" />
+    <Content Include="Views\Home\Detail.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
