完成MVC分页功能，同时加入了测试数据库

--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -3,7 +3,6 @@
   For more information on how to configure your ASP.NET application, please visit
   http://go.microsoft.com/fwlink/?LinkId=152368
   -->
-
 <configuration>
   <configSections>
     <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
@@ -11,39 +10,40 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" providerName="System.Data.SqlClient" connectionString="Data Source=(LocalDb)\v11.0;Initial Catalog=aspnet-WebUI-20121026135708;Integrated Security=SSPI;AttachDBFilename=|DataDirectory|\aspnet-WebUI-20121026135708.mdf" />
-  </connectionStrings>
+  <add name="SNSDBEntities" connectionString="metadata=res://*/Models.SNSDB.csdl|res://*/Models.SNSDB.ssdl|res://*/Models.SNSDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=SNSDB;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" /></connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="2.0.0.0" />
     <add key="webpages:Enabled" value="false" />
     <add key="PreserveLoginUrl" value="true" />
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
-    <add key="DB" value="Data Source=.\sqlexpress;Initial Catalog=SNSDB;Integrated Security=True"/>
+    <add key="DB" value="Data Source=.\sqlexpress;Initial Catalog=SNSDB;Integrated Security=True" />
   </appSettings>
-
   <!--可以让Account这个目录被访问-->
   <location path="Account">
     <system.web>
       <authorization>
-        <allow users="*"/>
+        <allow users="*" />
       </authorization>
     </system.web>
   </location>
   <!--可以让Account这个目录被访问-->
   <system.web>
     <httpRuntime targetFramework="4.5" />
-    <compilation debug="true" targetFramework="4.5" />
+    <compilation debug="true" targetFramework="4.5">
+      <assemblies>
+        <add assembly="System.Data.Entity, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+      </assemblies>
+    </compilation>
     <!--设置为form验证, 并拒绝所有的匿名用户-->
     <authentication mode="Forms">
       <forms loginUrl="~/Account/Logon" timeout="2880" path="/" />
     </authentication>
     <!--设置为form验证, 并拒绝所有的匿名用户-->
-    
     <!--实现拒绝所有用户-->
     <authorization>
-      <deny users="?"/>
+      <deny users="?" />
     </authorization>
-   
     <pages>
       <namespaces>
         <add namespace="System.Web.Helpers" />
