完成验证码功能

--- a/WebUI/Web.config
+++ b/WebUI/Web.config
@@ -28,6 +28,16 @@
     </system.web>
   </location>
   <!--可以让Account这个目录被访问-->
+  <!--可以让Captcha这个目录被访问-->
+  <location path="Captcha">
+    <system.web>
+      <authorization>
+        <allow users="*" />
+      </authorization>
+    </system.web>
+  </location>
+  <!--可以让Captcha这个目录被访问-->
+  
   <system.web>
     <httpRuntime targetFramework="4.5" />
     <compilation debug="true" targetFramework="4.5">
