--- a/WebUI/WebUI.csproj
+++ b/WebUI/WebUI.csproj
@@ -125,12 +125,14 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\WebApiConfig.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CaptchaController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\NoteController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountModels.cs" />
+    <Compile Include="Models\CaptchaModel.cs" />
     <Compile Include="Models\NoteModels.cs" />
     <Compile Include="Models\SNSDB.Context.cs">
       <AutoGen>True</AutoGen>
@@ -381,6 +383,7 @@
     <Content Include="Views\Note\Append.cshtml" />
     <Content Include="Views\Home\Detail.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\Shared\_Captcha.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
