--- a/WebConsole/App.config
+++ b/WebConsole/App.config
@@ -1,8 +1,19 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <startup> 
-        <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
-    </startup>
+  <configSections>
+    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=5.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
+  </configSections>
+  <startup>
+    <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
+  </startup>
   <appSettings>
-    <add key="DB" value="Data Source=.\sqlexpress;Initial Catalog=SNSDB;Integrated Security=True"/>  </appSettings>
+    <add key="DB" value="Data Source=.\sqlexpress;Initial Catalog=SNSDB;Integrated Security=True" />
+  </appSettings>
+  <connectionStrings>
+    <add name="SNSDBEntities" connectionString="metadata=res://*/SNSDB.csdl|res://*/SNSDB.ssdl|res://*/SNSDB.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=.\sqlexpress;initial catalog=SNSDB;integrated security=True;multipleactiveresultsets=True;application name=EntityFramework&quot;" providerName="System.Data.EntityClient" />
+  </connectionStrings>
+  <entityFramework>
+    <defaultConnectionFactory type="System.Data.Entity.Infrastructure.SqlConnectionFactory, EntityFramework" />
+  </entityFramework>
 </configuration>
